# melatonin_blur

./: .clang-format  .gitignore  CMakeLists.txt  README.md  melatonin_blur.cpp  melatonin_blur.h  melatonin_blur.mm
.github/workflows/: tests.yml
benchmarks/: argb.cpp  benchmarks.cpp  drop_shadow.cpp  melatonin_reporter.h  single_channel.cpp
melatonin/: blur.h  blur_demo_component.h  cached_blur.cpp  cached_blur.h  drop_shadow.h  helpers.h  melatonin_blur_component.h  shadows.h
melatonin/implementations/: all.h  core_image.h  core_image.mm  direct2d.cpp  direct2d.h  float_vector_stack_blur.h  gaussian.h  gin.h  ipp_vector.h  naive_class.h  platform_headers.h  platform_includes.h  prefix_sum_naive.h  prefix_sum_neon.h  prefix_sum_simd.h  prefix_sum_sse2.h  templated_function_float.h  vImage.cpp  vImage.h  vImage_macOS14.h  vector.h  vector_class.h  vector_convolution.h  vector_optimized.h
melatonin/internal/: cached_shadows.cpp  cached_shadows.h  implementations.h  libdivide.h  rendered_single_channel_shadow.cpp  rendered_single_channel_shadow.h  rotation.h
melatonin/support/: cached_shadow.h  cached_shadows.h  helpers.h  implementations.h  rendering.h
tests/: CatchMain.cpp  blur_implementations.cpp  composite_argb.cpp  constructors_and_float_parameters.cpp  correctness.cpp  drop_shadow.cpp  inner_shadow.cpp  juce_context_transforms.cpp  path_equality.cpp  path_with_shadows.cpp  render_shadow_to_ARGB.cpp  render_single_channel.cpp  rotation.cpp  setters.cpp  shadow_scaling.cpp  stroked_path.cpp  text_shadow.cpp
tests/fixtures/chrome/: index.html
tests/helpers/: pixel_helpers.h
